Fixed tag alignment

--- a/app/assets/css/assessOveride-new.css
+++ b/app/assets/css/assessOveride-new.css
@@ -120,3 +120,9 @@
   background-color: #ffdd00;
   padding: 2px 4px;
 }
+
+.app-aligned-header-tag {
+    align-items: anchor-center;
+    gap: .5em;
+    display: flex;
+}
